styles.css
@font-face {
    font-family: roboto;
    src: url(./fonts/transfonter.org-20260409-142744/Roboto-Regular.woff2);
}

* {
    box-sizing: border-box;
    list-style: none;
    font-family: roboto, sans-serif;
    --theme-color: rgb(131, 180, 226);
}

img {
    height: 1em;
    width: auto;
}

body {
    display: grid;
    grid-template-columns: 1fr minmax(50%, 60%) 1fr;
    grid-template-rows: repeat(2, 1fr) 100%;
 
}

.logo {
    grid-area: 1 / 1;
    font-size: 30px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    color: white;
    background-color: var(--theme-color);
    padding: 3px;
    height: max-content;
}

.logo img {
    filter: invert();
}

.header {
    grid-area: 1 / 2 / 1 / 4;
    display: grid;
    grid-auto-flow: column;
    grid-template-columns: 4fr 3fr;
    justify-content: space-between;
    align-items: center;
}

.header>div>input {
    border-style: none;
    border-radius: 15px;
    width: 80%;
    background-color: rgb(214, 214, 214);
}

.header>div>button {
    border: none;
    background-color: rgba(0 0 0 / 0);
    padding: 3px;
}

.header>div.user {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    justify-content: end;
    gap: 15px;
}

.header>div.searchbar {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.left-sidebar {
    grid-area: 2 / 1 / 4 / 2;
    background-color: var(--theme-color);
    color: white;
    font-size: 25px;
}

.left-sidebar img {
    filter: invert();
}

.taskbar {
    grid-area: 2 / 2 / 3 / 4;
}

.projects {
    grid-area: 3 / 2 / 4 / 3;

}

.right-sidebar {
    grid-area: 3 / 3 / 4 / 4;
}

